--- a/index.html
+++ b/index.html
@@ -1,55 +1,61 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pomodoro App</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/styles/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Khand&family=Rubik:wght@700&display=swap');
+    </style>
 </head>
-<body>
 
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+<body>
+    <header class="container">
+        <nav class="navbar navbar-expand-lg fixed-top ">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <i class='bx bx-time'></i>
                 </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  <a class="nav-link" href="#">Sobre nós</a>
-                  <a class="nav-link" href="#">Contato</a>
-                  <a class="nav-link" href="#">Localização</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" href="#aboutUs">Sobre nós</a>
+                        <a class="nav-link" href="#location">Contato</a>
+                    </div>
                 </div>
-              </div>
-            </div> 
-        </nav>    
+            </div>
+        </nav>
     </header>
 
-    <main>
+    <main class="container">
         <section id="pomodoro">
             <div class="container">
                 <form class="form-timer">
                     <div class="input-content">
                         <label for="study-hours">Horas</label>
-                        <input type="number" id="study-hours" min="0" max="23" value="0">
+                        <input type="number" class="text-input" id="study-hours" min="0" max="23" value="0">
                     </div>
                     <div class="input-content">
                         <label for="study-minutes">Minutos</label>
-                        <input type="number" id="study-minutes" min="0" max="59" value="30">
+                        <input type="number" class="text-input" id="study-minutes" min="0" max="59" value="30">
                     </div>
-                    <input type="submit" value="Setar Tempo" class="time-btn">
+                    <input type="submit" value="Definir Tempo" class="time-btn ">
                 </form>
                 <div class="timer">
                     <div>
                         <p id="rest-message" class="hidden">Defina o tempo de descanso!</p>
                     </div>
-                    <div>
+                    <div class="cronometro">
                         <span class="hours">00</span>
                         <span>:</span>
                         <span class="minutes">00</span>
@@ -58,15 +64,131 @@
                     </div>
                 </div>
                 <div class="controls">
-                    <button id="start-button">Iniciar</button>
-                    <button id="stop-button">Parar</button>
-                    <button id="reset-button">Reiniciar</button>
+                    <button id="start-button" class="butonsPlay">Iniciar</button>
+                    <button id="stop-button" class="butonsPlay">Parar</button>
+                    <button id="reset-button" class="butonsPlay">Reiniciar</button>
                 </div>
             </div>
         </section>
-    </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        <section class="aboutUs" id="aboutUs">
+            <div class="headerAboutUs">
+                <h1>Sobre Nós</h1>
+                <img src="./assets/images/users.png" alt="Imagem com 3 usuários" width="100px" height="100px">
+            </div>
+            <div class="bodyAboutUs">
+                <img src="./assets/images/icon_prancheta.png" alt="Imagem com 3 usuários" width="100px" height="100px">
+                <div class="styleP">
+                    <p>Somos um grupo de estudantes apaixonados por aprendizado, colaboração e inovação. Nosso
+                        compromisso é
+                        transformar o ambiente acadêmico em um espaço dinâmico e inspirador, onde o conhecimento se
+                        funde com a
+                        criatividade. Nós somos um grupo diversificado de estudantes, vindos de diferentes áreas de
+                        estudo e origens
+                        culturais. Essa diversidade é a nossa força, pois acreditamos que as melhores ideias nascem
+                        quando diferentes
+                        perspectivas se encontram.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="membersGroup" id="membersGroup">
+            <h2 class="mb-4 txtEquipe">Nossa Equipe</h2>
+            <div class="container">
+                <div class="row">
+                    <div class="col-6">
+                        <div class="teamMembers mb-3">
+                            <img class="imgMembers" src="./assets/images/img_caioHenrique.jpeg" width="60px" height="60px"
+                                alt="Img membro da equipe">
+                            <div class="contentMembers">
+                                <h3>Caio Henrique</h3>
+                                <p class="registrationLabel">Matrícula: 01509846</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="teamMembers mb-3">
+                            <img class="imgMembers" src="./assets/images/img_caio.jpeg" width="60px" height="60px"
+                                alt="Img membro da equipe">
+                            <div class="contentMembers">
+                                <h3>Caio Nemésio</h3>
+                                <p class="registrationLabel">Matrícula: 01564870</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <div class="teamMembers mb-3">
+                            <img class="imgMembers" src="./assets/images/img_caioCesar.jpeg" width="60px" height="60px"
+                                alt="Img membro da equipe">
+                            <div class="contentMembers">
+
+                                <h3>Caio Cesar</h3>
+                                <p>Matrícula: 01518018</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="teamMembers mb-3">
+                            <img class="imgMembers" src="./assets/images/img_amhos.jpeg" width="60px" height="60px"
+                                alt="Img membro da equipe">
+                            <div class="contentMembers">
+
+                                <h3>Amhos Cezar</h3>
+                                <p class="registrationLabel">Matrícula:  01589117</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6">
+                        <div class="teamMembers mb-3">
+                            <img class="imgMembers" src="./assets/images/img_caua.jpeg" width="60px" height="60px"
+                                alt="Img membro da equipe">
+                            <div class="contentMembers">
+                                <h3>Cauã Victor</h3>
+                                <p class="registrationLabel">Matrícula: 01588771</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="teamMembers mb-3">
+                            <img class="imgMembers" src="./assets/images/img_eliabe.jpeg" width="60px" height="60px"
+                                alt="Img membro da equipe">
+                            <div class="contentMembers">
+                                <h3>Eliabe Wesley</h3>
+                                <p class="registrationLabel">Matrícula: 01571655</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="location" id="location">
+            <h1 class="my-5">Fale Conosco</h1>
+            <div class="locationContent">
+                <h2>Venha nos visitar na nossa sede em Recife e descubra o coração da inovação! Estamos localizados na
+                    R. Guilherme Pinto, 114 - Graças, Recife - PE, 52011-210. Esperamos por você para uma experiência
+                    tecnológica única!</h2>
+                <div class="apiMaps">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.486351114698!2d-34.90580802416499!3d-8.051769580433186!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab18e110b4c52d%3A0x593f97edf11f2dd9!2sBloco%20A%20-%20R.%20Guilherme%20Pinto%2C%20114%20-%20Gra%C3%A7as%2C%20Recife%20-%20PE%2C%2052011-210!5e0!3m2!1sen!2sbr!4v1696295063972!5m2!1sen!2sbr"
+                        width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy" class="mapsSize"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+
+        </section>
+    </main>
+    <footer class="footer pt-2">
+        <p>PomodoroTeam © Todos os direitos reservados</p>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
     <script src="./assets/scripts/script.js"></script>
 </body>
+
 </html>
